# TBS

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
src/: main.cpp
src/Compatability/SW/: Common.h
src/Compatability/SW/Commands/: MarchCommandFactory.h
src/Compatability/SW/System/: EventLogger.h
src/Compatability/SW/Units/: HunterFactory.h  SwordsmanFactory.h
src/TBS/: Common.h
src/TBS/Commands/: BaseAttackCommand.cpp  BaseAttackCommand.h  BaseCommand.h  CommandComposite.cpp  CommandComposite.h  CommandFactory.h  DistantAttackCommand.cpp  DistantAttackCommand.h  MeleeAttackCommand.cpp  MeleeAttackCommand.h  MoveCommand.cpp  MoveCommand.h
src/TBS/ECS/: Common.h
src/TBS/ECS/Components/: ComponentStorage.h  IComponentStorage.h
src/TBS/ECS/Components/Unit/: Common.h
src/TBS/ECS/Events/: BaseEventStorage.h  EventBus.h  EventQueue.h
src/TBS/ECS/Events/Unit/: DeathEvent.h
src/TBS/ECS/Registry/: Registry.cpp  Registry.h
src/TBS/ECS/Registry/World/: Map.cpp  Map.h
src/TBS/ECS/Systems/Unit/: AttackSystem.cpp  AttackSystem.h  BehaviourSystem.cpp  BehaviourSystem.h  CleanupSystem.cpp  CleanupSystem.h  HealthSystem.cpp  HealthSystem.h  MovementSystem.cpp  MovementSystem.h
src/TBS/System/: CommandFactory.h  EntityFactory.h  EventLogger.h  Simulation.cpp  Simulation.h  WorldContext.h
src/TBS/Units/: BehaviourVisitor.h  Hunter.h  Swordsman.h  Unit.cpp  Unit.h  UnitFactory.h
src/TBS/Units/Components/: BaseAttackComponent.h  BaseHealthComponent.h  Common.h
src/TBS/Units/Components/Attack/: BaseAttackComponent.h  DistantAttackComponent.cpp  DistantAttackComponent.h  MeleeAttackComponent.cpp  MeleeAttackComponent.h
src/TBS/Units/Components/Behaviour/: BaseBehaviourComponent.cpp  BaseBehaviourComponent.h  HunterBehaviourComponent.h  (+1 more)
src/TBS/World/: Map.cpp  Map.h  WorldContext.h
(+23 files in other folders)
